--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -4,19 +4,19 @@ zookeeper:
   environment:
     - MYID=1
     #- SERVERS=node-1,node-2,node-3
-  ports:
+  expose:
     - "2181" # Client connections
     - "2888" # Inter-node communication
     - "3888" # Inter-node communication
 postgresql:
   container_name: imply-poc-postgresql
-  image: postgresql:9.4
-  ports:
+  image: postgres:9.4
+  expose:
     - "5432" # SQL connections
 cassandra:
   container_name: imply-poc-cassandra
   image: cassandra:2.2
-  ports:
+  expose:
     - "7000" # Internode
     - "7001" # Internode TLS
     - "7199" # JMX
