GAM-552 : Implement Druid POC
load-data.coffee
- started building out the data insertion script

package.json
- added moment module

services/docker-compose.yml
- added SERVERS to Zookeeper environment

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "cassandra-driver": "*",
     "coffee-script": "*",
     "lodash": "*",
+    "moment": "*",
     "pg": "*",
     "q": "*",
     "request": "*"
