--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -3,7 +3,7 @@ zookeeper:
   image: mesoscloud/zookeeper:3.4.6-ubuntu
   environment:
     - MYID=1
-    #- SERVERS=node-1,node-2,node-3
+    - SERVERS=node-1,node-2,node-3
   expose:
     - "2181" # Client connections
     - "2888" # Inter-node communication
