GAM-552 : Implement Druid POC
druid/Dockerfile -> druid/imply-druid/Dockerfile
druid/docker-compose.yml
- moved the build into the imply-druid directory
- all custom configs are copied over at once

druid/common.runtime.properties -> druid/imply-druid/conf/druid/_common/common.runtime.properties
- moved common rutime properties into the custom config directory

druid/imply-druid/conf/druid/broker/jvm.config
druid/imply-druid/conf/druid/coordinator/jvm.config
druid/imply-druid/conf/druid/historical/jvm.config
druid/imply-druid/conf/druid/middleManager/jvm.config
druid/imply-druid/conf/druid/overlord/jvm.config
- custom JVM configs

--- a/druid/imply-druid/conf/druid/_common/common.runtime.properties
+++ b/druid/imply-druid/conf/druid/_common/common.runtime.properties
@@ -36,7 +36,7 @@ druid.zk.paths.base=/druid
 
 druid.metadata.storage.type=postgresql
 druid.metadata.storage.connector.connectURI=jdbc:postgresql://postgresql/druid
-druid.metadata.storage.connector.username=postgres
+druid.metadata.storage.connector.user=postgres
 druid.metadata.storage.connector.password=postgres
 
 
